Journal App Work in Progress - 20171113

--- a/views/journals/index.ejs
+++ b/views/journals/index.ejs
@@ -33,7 +33,7 @@
       </ul>
     </nav>
 
-<%# periodobj[0] %> %>
+<%# periodobj[0] %>
     <article>
 
       <ol>
@@ -44,7 +44,7 @@
             <legend> Journal Entry </legend>
             <div class="title"> Entry Date: </div>
             <div class="field-date"><%= journal.entdate %></div>
-            <div class="title"> Entry Title: </div>
+            <div class="title"> Event Title: </div>
             <div class="field-title" ><%= journal.enttitle %> </div>
             <div class="title"> Entry Reference: </div>
             <div class="field"><%= journal.entperiod %> </div>
