--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,138 +1,200 @@
 body {
-  padding: 1em;
-  font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
-  color: blue;
+    padding: 1em;
+    /* font: 16px Verdana, Arial, Helvetica, sans-serif; */
+    font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
+    color: blue;
 }
+
 div.container {
-  width: 1230px;
-  border: 4px solid black;
+    width: 1230px;
+    border: 4px solid black;
 }
 
 .fldname {
-  color: black;
-  position: static;
-  display: inline-block;
-  vertical-align: text-top;
-  /*font-weight: bold;*/
+    color: black;
+    position: static;
+    display: inline-block;
+    vertical-align: text-top;
+    /*font-weight: bold;*/
 }
+
 .title {
-  color: black;
-  font-weight: bold;
-  position: static;
-  display: inline-block;
-  vertical-align: text-top;
-  padding-right: 1em;
-  border: none;
-  /*width: 155px;*/
-  /*border:  1px solid green;*/
-  /*padding-right: 1em*/
-
+    color: black;
+    font-weight: bold;
+    position: static;
+    display: inline-block;
+    vertical-align: text-top;
+    padding-right: 1em;
+    border: none;
+    /*width: 155px;*/
+    /*border:  1px solid green;*/
+    /*padding-right: 1em*/
 }
+
 .field {
-  color: blue;
-  font-weight: normal;
-  position: relative;
-  display: inline-block;
-  vertical-align: text-top;
-  padding-top: 4px;
-  padding-right: 1em;
-  /*border: none;*/
-  /*border:  1px solid green;*/
-  /*border:  1px solid yellow;*/
-}
-.field-title {
-  color: blue;
-  font-weight: normal;
-  width: 18em;
-  position: relative;
-  display: inline-block;
-  vertical-align: text-top;
-  padding-top: 4px;
-  padding-right: 1em;
-  /*border:  1px solid green;*/
-  /*border: none;*/
-  /*border:  1px solid yellow;*/
-}
-.field-date {
-  color: blue;
-  font-weight: normal;
-  position: relative;
-  display: inline-block;
-  vertical-align: text-top;
-  padding-top: 4px;
-  padding-right: 1em;
-  /*border:  1px solid green;*/
-}
-.field-entry {
-  color: blue;
-  font-weight: normal;
-  width: 730px;
-  height:110px;
-  position: relative;
-  background-color: #f8f8f8;
-  border: 2px solid #ccc;
-  padding: 1em;
-  overflow: auto;
-  left: 0px;
-}
-.field-title-checkbox {
-  color: black;
-  font-weight: bold;
-  width: 5.5em;
-  position: relative;
-  display: inline-block;
-  vertical-align: text-top;
-  padding-top: 4px;
-  padding-right: 0em;
-  /*border:  1px solid green;*/
-  /*border: none;*/
-  /*border:  1px solid yellow;*/
-}
-.field-checkbox {
-  color: blue;
-  font-weight: normal;
-  position: relative;
-  display: inline-block;
-  vertical-align: text-top;
-  padding-top: 8px;
-  padding-right: 1em;
-}
-.field-radio {
-  color: blue;
-  font-weight: normal;
-  position: relative;
-  display: inline-block;
-  vertical-align: text-top;
-  padding-top: 8px;
-  padding-right: 1em;
-}
-.field-display-only {
-  color: white;
-  font-weight: normal;
-  position: relative;
-  vertical-align: text-top;
-  display: inline-block;
-  background-color: #ccc;
-  padding-top: 1px;
-  padding-left: 1em;
-  padding-right: 2em;
-  /*border: none;*/
-  border: 2px solid #ccc;
-  /*border:  1px solid yellow;*/
-}
-fieldset {
-  color: gray;
-  width: 925px;
-  border: 2px solid;
-}
-fieldset.subgroup {
-  color: gray;
-  width: 725px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
+    color: blue;
+    font-weight: normal;
+    position: relative;
+    display: inline-block;
+    vertical-align: text-top;
+    padding-top: 4px;
+    padding-right: 1em;
+    /*border: none;*/
+    /*border:  1px solid green;*/
+    /*border:  1px solid yellow;*/
 }
 
-header, footer {
+.field-ref-search {
+    color: blue;
+    font-weight: normal;
+    position: relative;
+    width: 5em;
+    display: inline-block;
+    vertical-align: text-top;
+    padding-top: 4px;
+    padding-right: 1em;
+    /*border: none;*/
+    /*border:  1px solid green;*/
+    /*border:  1px solid yellow;*/
+}
+
+.field-title-search {
+    color: blue;
+    font-weight: normal;
+    width: 27em;
+    position: relative;
+    display: inline-block;
+    vertical-align: text-top;
+    padding-top: 4px;
+    padding-right: 1em;
+    /*border:  1px solid green;*/
+    /*border: none;*/
+    /*border:  1px solid yellow;*/
+}
+
+.field-title {
+    color: blue;
+    font-weight: normal;
+    width: 18em;
+    position: relative;
+    display: inline-block;
+    vertical-align: text-top;
+    padding-top: 4px;
+    padding-right: 1em;
+    /*border:  1px solid green;*/
+    /*border: none;*/
+    /*border:  1px solid yellow;*/
+}
+
+.field-date {
+    color: blue;
+    font-weight: normal;
+    position: relative;
+    display: inline-block;
+    vertical-align: text-top;
+    padding-top: 0px;
+    padding-right: 1em;
+    /*border:  1px solid green;*/
+}
+
+.field-title-checkbox {
+    color: black;
+    font-weight: bold;
+    width: 5.5em;
+    position: relative;
+    display: inline-block;
+    vertical-align: text-top;
+    padding-top: 4px;
+    padding-right: 0em;
+    /*border:  1px solid green;*/
+    /*border: none;*/
+    /*border:  1px solid yellow;*/
+}
+
+.field-title-radio {
+    color: black;
+    font-weight: bold;
+    width: 5.2em;
+    position: relative;
+    display: inline-block;
+    vertical-align: text-top;
+    padding-top: 4px;
+    padding-right: 1px;
+    /*border:  1px solid green;*/
+    /*border: none;*/
+    /*border:  1px solid yellow;*/
+}
+
+.field-checkbox {
+    color: blue;
+    font-weight: normal;
+    position: relative;
+    display: inline-block;
+    vertical-align: text-top;
+    padding-top: 8px;
+    padding-right: 1em;
+}
+
+.field-radio {
+    color: blue;
+    font-weight: normal;
+    position: relative;
+    display: inline-block;
+    vertical-align: text-top;
+    padding-top: 8px;
+    padding-right: 1px;
+}
+
+.field-display-only {
+    color: white;
+    font-weight: normal;
+    position: relative;
+    vertical-align: text-top;
+    display: inline-block;
+    background-color: #ccc;
+    padding-top: 1px;
+    padding-left: 1em;
+    padding-right: 2em;
+    /*border: none;*/
+    border: 2px solid #ccc;
+    /*border:  1px solid yellow;*/
+}
+
+.field-dropdown {
+    color: green;
+    font-weight: normal;
+    position: relative;
+    display: inline-block;
+    vertical-align: text-top;
+    padding-top: 4px;
+    padding-right: 1em;
+    /*border: none;*/
+    /*border:  1px solid green;*/
+    /*border:  1px solid yellow;*/
+    /* position: relative;
+    display: inline-block;
+    vertical-align: text-top;
+    padding-top: 4px;
+    padding-right: 1em;
+    border:  1px solid green; */
+    padding: 0px;
+}
+
+fieldset {
+    color: gray;
+    width: 925px;
+    border: 2px solid;
+}
+
+fieldset.subgroup {
+    color: gray;
+    width: 725px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+}
+
+header,
+footer {
     padding: 1em;
     color: white;
     background-color: black;
@@ -163,62 +225,101 @@ article {
     padding-left: 2em;
     overflow: auto;
 }
+
 article ol {
     padding: 0px;
 }
 
 p {
-  font-weight: normal;
+    font-weight: normal;
 }
 
 a {
-  color: #00B7FF;
+    color: #00B7FF;
 }
 
 h3 {
-  color: red;
-  font-weight: bold;
+    color: red;
+    font-weight: bold;
 }
+
+.button {
+    color: white;
+    background-color: black;
+    height: 28px;
+    display: inline-block;
+    position: relative;
+    padding-top: 5px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-bottom: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    vertical-align: text-top;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    border: none;
+    border-radius: 15px;
+}
+
+.button:hover {
+    background-color: rgb(0, 0, 40);
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.button:active {
+    background-color: rgb(0, 0, 40);
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+    transform: translateY(4px);
+}
+
 legend {
-  color: red;
-  font-weight: bold;
-  padding-left: 1em;
-  padding-right: 1em;
+    color: red;
+    font-weight: bold;
+    padding-left: 1em;
+    padding-right: 1em;
 }
+
 input {
-  color: black;
-  background-color: #f8f8f8;
-  border: 2px solid #ccc;
-  padding: 2px;
-  /*width: 50;*/
+    color: black;
+    background-color: #f8f8f8;
+    border: 2px solid #ccc;
+    padding: 2px;
+    /*width: 50;*/
 }
+
 input[type=text] {
-  float: left;
-  color: blue;
-  border: 2px solid #ccc;
-  box-sizing: border-box;
+    float: left;
+    color: blue;
+    border: 2px solid #ccc;
+    box-sizing: border-box;
 }
+
 input[type=date] {
-  float: left;
-  color: blue;
-  border: 2px solid #ccc;
+    float: left;
+    color: blue;
+    border: 2px solid #ccc;
 }
+
 input[type=checkbox] {
-  float: left;
-  color: blue;
+    float: left;
+    color: blue;
 }
+
 textarea {
-  width: 725px;
-  height:110px;
-  background-color: #f8f8f8;
-  border: 2px solid #ccc;
-  padding-left: 1em;
-  padding-top: 1em;
-  padding-bottom: 1em;
-  flex-direction: column;
-  overflow: auto;
-  resize: vertical;
-  word-break: keep-all;
-  white-space: normal;
-  word-wrap: normal;
+    width: 725px;
+    height: 110px;
+    background-color: #f8f8f8;
+    border: 2px solid #ccc;
+    padding-left: 3px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    text-align: left;
+    text-indent: 0px;
+    overflow: auto;
+    resize: vertical;
+    word-break: keep-all;
+    white-space: normal;
+    word-wrap: break-word;
 }
