--- a/views/journals/edit4.ejs,txt.ejs
+++ b/views/journals/edit4.ejs,txt.ejs
@@ -41,7 +41,7 @@
           <input type="hidden" name="_method" value="POST">
           <br>
 
-          <div class="title"> Event Title:  </div>
+          <div class="title"> Entry Title:  </div>
           <div class="field-title"><input type="text" name="enttitle" size="65" value="<%= journal.enttitle %>" required></div>
           <br>
           <br>
@@ -49,23 +49,20 @@
           <div class="field-date"><input type="date" name="entdate" value="<%= journal.entdate %>" required></div>
           <br>
           <br>
-          <div class="title"> Time Reference: </div>
-          <div class="field-dropdown"> <input list="refperiod" name="entperiod" required>  
-            <datalist id="refperiod">
-                <option value="0000-All Day"> </option>  
-                <option value="0500-Early AM"> </option>  
-                <option value="0600-Morning"> </option>  
-                <option value="0701-Breakfast"> </option>  
-                <option value="1100-Midday"> </option>  
-                <option value="1200-Noon"> </option>  
-                <option value="1201-Lunch"> </option>  
-                <option value="1300-Midday"> </option>
-                <option value="1330-Afternoon"> </option>  
-                <option value="1800-Evening"> </option>  
-                <option value="1801-Dinner"> </option>  
-                <option value="2400-Midnight"> </option>
-              </datalist>
-          </div>
+          <div class="title">  Entry Reference:  </div>
+          <div class="field"><input list="period" type="text"  name="entperiod" required ></div>
+          <datalist id="period">
+            <option value="0000-All Day">
+            <option value="0100-Early AM">
+            <option value="0600-Morning">
+            <option value="0700-Breakfast">
+            <option value="1200-Midday">
+            <option value="1200-Lunch">
+            <option value="1300-Afternoon">
+            <option value="1800-Evening">
+            <option value="1800-Dinner">
+            <option value="2400-Midnight">
+          </datalist>
           <div class="title"> User ID: </div>
           <div class="field-display-only"><%= journal.userid %></div>
           <br>
