--- a/views/journals/new.ejs
+++ b/views/journals/new.ejs
@@ -34,123 +34,128 @@
       <fieldset>
         <legend> Journal Entry </legend>
 
-    <form method="POST" action="/journals">
-      <% let userid = "BKP03"; %>
-      <% let entryid = "00000"; %>
-      <% let periodcode = "9999"; %>
-      <% let dateconvt = "20010101"; %>
-      <% let dbid = "JLDB"; %>
+      <form method="POST" action="/journals">
+        <% let userid = "BKP03"; %>
+        <% let entryid = "00000"; %>
+        <% let periodcode = "9999"; %>
+        <% let dateconvt = "20010101"; %>
+        <% let dbid = "JLDB"; %>
 
-      <div class="title"> Entry Title: </div>
-      <div class="field"><input type="text" size="65" name="enttitle" ></div>
-      <br> <br>
-      <div class="title"> Entry Date: </div>
-      <div class="field-date"><input type="date" min="1962-01-01" name="entdate"></div>
-      <br> <br>
-      <div class="title"> Entry Reference: </div>
-      <div class="field"><input list="period" type="text" name="entperiod" ></div>
-      <datalist id="period">
-        <option value="0000-All Day">
-        <option value="0100-Early AM">
-        <option value="0600-Morning">
-        <option value="0700-Breakfast">
-        <option value="1200-Midday">
-        <option value="1200-Lunch">
-        <option value="1300-Afternoon">
-        <option value="1800-Evening">
-        <option value="1800-Dinner">
-        <option value="2400-Midnight">
-      </datalist>
-      <div class="title"> User ID: </div>
-      <div class="field-display-only"><%= userid %></div>
-      <br> <br>
-      <div class="title"> Journal Entry: </div>
-      <div><textarea name="journalentry">
-      </textarea></div>
-      <br>
-      <br>
-
-      <fieldset class="subgroup" id="conversation"  >
-        <legend>Conversation</legend>
-        <div>
-        <div class="field-title-checkbox">Meeting:</div>
-        <div class="field-radio"><input type="radio" id="radioC1" name="conversation" value="meeting"></div>
-        <div class="field-title-checkbox">Phone:</div>
-        <div class="field-radio"><input type="radio" id="radioC2" name="conversation" value="telephone"></div>
-        <div class="field-title-checkbox">Email:</div>
-        <div class="field-radio"><input type="radio" id="radioC3" name="conversation" value="email"></div>
-        <div class="field-title-checkbox">News:</div>
-        <div class="field-radio"><input type="radio" id="radioC4" name="conversation" value="news"></div>
-        <div class="field-title-checkbox">Letter:</div>
-        <div class="field-radio"><input type="radio" id="radioC5" name="conversation" value="letter"></div>
+        <div class="title"> Event Title: </div>
+        <div class="field"><input type="text" size="65" name="enttitle" required></div>
+        <br> <br>
+        <div class="title"> Entry Date: </div>
+        <div class="field-date"><input type="date" min="1962-01-01" name="entdate" required></div>
+        <br> <br>
+        <div class="title">   Time Reference:  </div>
+        <div class="field-dropdown"> <input list="refperiod" name="entperiod" required>  
+          <datalist id="refperiod">
+                <option value="0000-All Day"> </option>  
+                <option value="0500-Early AM"> </option>  
+                <option value="0600-Morning"> </option>  
+                <option value="0701-Breakfast"> </option>  
+                <option value="1100-Midday"> </option>  
+                <option value="1200-Noon"> </option>  
+                <option value="1201-Lunch"> </option>  
+                <option value="1300-Midday"> </option>
+                <option value="1330-Afternoon"> </option>  
+                <option value="1800-Evening"> </option>  
+                <option value="1801-Dinner"> </option>  
+                <option value="2400-Midnight"> </option>
+          </datalist>
         </div>
-      </fieldset>
-      <fieldset class="subgroup" id="event" >
-        <legend>Event</legend>
-        <div>
-        <div class="field-title-checkbox">Workday: </div>
-        <div class="field-radio"><input type="radio" id="radioC1" name="entevent" value="workday"> </div>
-        <div class="field-title-checkbox">Weekend: </div>
-        <div class="field-radio"><input type="radio" id="radioC2" name="entevent" value="weekend"> </div>
-        <div class="field-title-checkbox">School: </div>
-        <div class="field-radio"><input type="radio" id="radioC3" name="entevent" value="school"> </div>
-        <div class="field-title-checkbox">Vacation: </div>
-        <div class="field-radio"><input type="radio" id="radioC4" name="entevent" value="vacation"> </div>
-        <div class="field-title-checkbox">Sickday: </div>
-        <div class="field-radio"><input type="radio" id="radioC5" name="entevent" value="sickday"> </div>
-        </div>
-      </fieldset>
-      <fieldset class="subgroup" id="meal" >
-        <legend>Meal</legend>
-        <div>
-        <div class="field-title-checkbox">Dine-in: </div>
-        <div class="field-checkbox"><input type="radio" id="radioC1" name="meal" value="dinein"> </div>
-        <div class="field-title-checkbox">Dine-out: </div>
-        <div class="field-checkbox"><input type="radio" id="radioC2" name="meal" value="dineout"> </div>
-        <div class="field-title-checkbox">Carry-out: </div>
-        <div class="field-checkbox"><input type="radio" id="radioC3" name="meal" value="carryout"> </div>
-        <div class="field-title-checkbox">Self Bag: </div>
-        <div class="field-checkbox"><input type="radio" id="radioC3" name="meal" value="selfbag"> </div>
-        <div class="field-title-checkbox">Snack: </div>
-        <div class="field-checkbox"><input type="radio" id="radioC4" name="meal" value="snack"> </div>
-      </div>
-      </fieldset>
-      <fieldset class="subgroup" id="entertainment" >
-        <legend>Entertainment</legend>
-        <div>
-        <div class="field-title-checkbox">Book: </div>
-        <div class="field-checkbox"><input type="radio" id="radioC1" name="entertainment" value="book"> </div>
-        <div class="field-title-checkbox">TV: </div>
-        <div class="field-checkbox"><input type="radio" id="radioC2" name="entertainment" value="tv"> </div>
-        <div class="field-title-checkbox">Movie: </div>
-        <div class="field-checkbox"><input type="radio" id="radioC3" name="entertainment" value="movie"> </div>
-        <div class="field-title-checkbox">Radio: </div>
-        <div class="field-checkbox"><input type="radio" id="radioC4" name="entertainment" value="radio"> </div>
-        <div class="field-title-checkbox">Concert: </div>
-        <div class="field-checkbox"><input type="radio" id="radioC5" name="entertainment" value="concert"> </div>
-      </div>
-      </fieldset>
-      <br>
-      <input type="submit" value="Add Journal Entry">
-      <br>
-      <br>
-      <br>
 
-      <div class="title"> Entry ID:   </div>
-      <div class="field-display-only"><%= entryid %></div>
-      <div class="title"> Code:   </div>
-      <div class="field-display-only"><%= periodcode %></div>
-      <div class="title"> Date Code: </div>
-      <div class="field-display-only"><%= dateconvt %></div>
-      <div class="title"> DB ID:   </div>
-      <div class="field-display-only"><%= dbid %></div>
-      <br>
-      <input type="hidden" name="userid" value=<%= userid %> >
-      <input type="hidden" name="entryid" value=<%= entryid %> >
-      <input type="hidden" name="periodcode" value=<%= periodcode %> >
-      <input type="hidden" name="dateconvt" value=<%= dateconvt %> >
-      <input type="hidden" name="dbid" value=<%= dbid %> >
-      <br>
+        <div class="title"> User ID: </div>
+        <div class="field-display-only"><%= userid %></div>
+        <br> <br>
+        <div class="title"> Journal Entry: </div>
+        <div><textarea name="journalentry">
+          </textarea>
+        </div>
+        <br>
+        <br>
+
+        <fieldset class="subgroup" id="source"  >
+          <legend>Source</legend>
+          <div>
+          <div class="field-title-checkbox">Meeting:</div>
+          <div class="field-radio"><input type="radio" id="radioC1" name="source" value="meeting"></div>
+          <div class="field-title-checkbox">Phone:</div>
+          <div class="field-radio"><input type="radio" id="radioC2" name="source" value="telephone"></div>
+          <div class="field-title-checkbox">Email:</div>
+          <div class="field-radio"><input type="radio" id="radioC3" name="source" value="email"></div>
+          <div class="field-title-checkbox">News:</div>
+          <div class="field-radio"><input type="radio" id="radioC4" name="source" value="news"></div>
+          <div class="field-title-checkbox">Letter:</div>
+          <div class="field-radio"><input type="radio" id="radioC5" name="source" value="letter"></div>
+          </div>
+        </fieldset>
+        <fieldset class="subgroup" id="event" >
+          <legend>Event</legend>
+          <div>
+          <div class="field-title-checkbox">Workday: </div>
+          <div class="field-radio"><input type="radio" id="radioC1" name="entevent" value="workday"> </div>
+          <div class="field-title-checkbox">Weekend: </div>
+          <div class="field-radio"><input type="radio" id="radioC2" name="entevent" value="weekend"> </div>
+          <div class="field-title-checkbox">School: </div>
+          <div class="field-radio"><input type="radio" id="radioC3" name="entevent" value="school"> </div>
+          <div class="field-title-checkbox">Vacation: </div>
+          <div class="field-radio"><input type="radio" id="radioC4" name="entevent" value="vacation"> </div>
+          <div class="field-title-checkbox">Sickday: </div>
+          <div class="field-radio"><input type="radio" id="radioC5" name="entevent" value="sickday"> </div>
+          </div>
+        </fieldset>
+        <fieldset class="subgroup" id="meal" >
+          <legend>Meal</legend>
+          <div>
+          <div class="field-title-checkbox">Dine-in: </div>
+          <div class="field-checkbox"><input type="radio" id="radioC1" name="meal" value="dinein"> </div>
+          <div class="field-title-checkbox">Dine-out: </div>
+          <div class="field-checkbox"><input type="radio" id="radioC2" name="meal" value="dineout"> </div>
+          <div class="field-title-checkbox">Carry-out: </div>
+          <div class="field-checkbox"><input type="radio" id="radioC3" name="meal" value="carryout"> </div>
+          <div class="field-title-checkbox">Self Bag: </div>
+          <div class="field-checkbox"><input type="radio" id="radioC3" name="meal" value="selfbag"> </div>
+          <div class="field-title-checkbox">Snack: </div>
+          <div class="field-checkbox"><input type="radio" id="radioC4" name="meal" value="snack"> </div>
+        </div>
+        </fieldset>
+        <fieldset class="subgroup" id="entertainment" >
+          <legend>Entertainment</legend>
+          <div>
+          <div class="field-title-checkbox">Book: </div>
+          <div class="field-checkbox"><input type="radio" id="radioC1" name="entertainment" value="book"> </div>
+          <div class="field-title-checkbox">TV: </div>
+          <div class="field-checkbox"><input type="radio" id="radioC2" name="entertainment" value="tv"> </div>
+          <div class="field-title-checkbox">Movie: </div>
+          <div class="field-checkbox"><input type="radio" id="radioC3" name="entertainment" value="movie"> </div>
+          <div class="field-title-checkbox">Radio: </div>
+          <div class="field-checkbox"><input type="radio" id="radioC4" name="entertainment" value="radio"> </div>
+          <div class="field-title-checkbox">Concert: </div>
+          <div class="field-checkbox"><input type="radio" id="radioC5" name="entertainment" value="concert"> </div>
+        </div>
+        </fieldset>
+        <br>
+        <input type="submit" value="Add Journal Entry">
+        <br>
+        <br>
+        <br>
+
+        <div class="title"> Entry ID:   </div>
+        <div class="field-display-only"><%= entryid %></div>
+        <div class="title"> Code:   </div>
+        <div class="field-display-only"><%= periodcode %></div>
+        <div class="title"> Date Code: </div>
+        <div class="field-display-only"><%= dateconvt %></div>
+        <div class="title"> DB ID:   </div>
+        <div class="field-display-only"><%= dbid %></div>
+        <br>
+        <input type="hidden" name="userid" value=<%= userid %> >
+        <input type="hidden" name="entryid" value=<%= entryid %> >
+        <input type="hidden" name="periodcode" value=<%= periodcode %> >
+        <input type="hidden" name="dateconvt" value=<%= dateconvt %> >
+        <input type="hidden" name="dbid" value=<%= dbid %> >
+        <br>
 
     </form>
   </fieldset>
