--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -100,12 +100,12 @@ div.container {
 .field-title-checkbox {
     color: black;
     font-weight: bold;
-    width: 5.5em;
+    width: 5.2em;
     position: relative;
     display: inline-block;
     vertical-align: text-top;
     padding-top: 4px;
-    padding-right: 0em;
+    padding-right: 1px;
     /*border:  1px solid green;*/
     /*border: none;*/
     /*border:  1px solid yellow;*/
@@ -307,7 +307,7 @@ input[type=checkbox] {
     color: blue;
 }
 
-textarea {
+.textcomment {
     width: 725px;
     height: 110px;
     background-color: #f8f8f8;
